--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman Utama</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../PBL-202_1/css/firstpage.css">
-    <link rel="stylesheet" href="../PBL-202_1/css/sidebar.css">
+    <link rel="stylesheet" href="../css/firstpage.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
@@ -68,7 +68,7 @@
                         <div class="placeholder bg-light mb-2" ></div>
                         <h5 class="fw-bold">Sponsor 1</h5>
                         <div class="img-container">
-                            <img src="../PBL-202_1/img/sponsor_1.jpg" class="img-1x1">
+                            <img src="../img/sponsor_1.jpg" class="img-1x1">
                         </div>
                         <p>Sponsor</p>
                         <button class="btn btn-outline-dark">Lihat</button>
@@ -79,7 +79,7 @@
                         <div class="placeholder bg-light mb-2" ></div>
                         <h5 class="fw-bold">Sponsor 2</h5>
                          <div class="img-container">
-                            <img src="../PBL-202_1/img/sponsor_2.jpg" class="img-1x1">
+                            <img src="../img/sponsor_2.jpg" class="img-1x1">
                         </div>
                         <p>Sponsor</p>
                         <button class="btn btn-outline-dark">Lihat</button>
@@ -90,7 +90,7 @@
                         <div class="placeholder bg-light mb-2" ></div>
                         <h5 class="fw-bold">Sponsor 3</h5>
                          <div class="img-container">
-                            <img src="../PBL-202_1/img/sponsor_3.jpg" class="img-1x1">
+                            <img src="../img/sponsor_3.jpg" class="img-1x1">
                         </div>
                         <p>Sponsor</p>
                         <button class="btn btn-outline-dark">Lihat</button>
@@ -101,7 +101,7 @@
                         <div class="placeholder bg-light mb-2" ></div>
                         <h5 class="fw-bold">Sponsor 4</h5>
                         <div class="img-container">
-                            <img src="../PBL-202_1/img/sponsor_1.jpg" class="img-1x1">
+                            <img src="../img/sponsor_1.jpg" class="img-1x1">
                         </div>
                         <p>Sponsor</p>
                         <button class="btn btn-outline-dark">Lihat</button>
@@ -112,7 +112,7 @@
                         <div class="placeholder bg-light mb-2" ></div>
                         <h5 class="fw-bold">Sponsor 5</h5>
                         <div class="img-container">
-                            <img src="../PBL-202_1/img/sponsor_1.jpg" class="img-1x1">
+                            <img src="../img/sponsor_1.jpg" class="img-1x1">
                         </div>
                         <p>Sponsor</p>
                         <button class="btn btn-outline-dark">Lihat</button>
@@ -123,7 +123,7 @@
                         <div class="placeholder bg-light mb-2" ></div>
                         <h5 class="fw-bold">Sponsor 6</h5>
                         <div class="img-container">
-                            <img src="../PBL-202_1/img/sponsor_1.jpg" class="img-1x1">
+                            <img src="../img/sponsor_1.jpg" class="img-1x1">
                         </div>
                         <p>Sponsor</p>
                         <button class="btn btn-outline-dark">Lihat</button>
@@ -161,7 +161,7 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../PBL-202_1/js/firstpage.js"></script>
-    <script src="../PBL-202_1/js/sidebar.js"></script>
+    <script src="../js/firstpage.js"></script>
+    <script src="../js/sidebar.js"></script>
 </body>
 </html>
